iac/1.manifests/sock-shop/sock-shop/init/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sockshop-gateway
  namespace: sock-shop
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - gateway.istio-ingress.svc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: sock-shop
spec:
  hosts:
  - '*'
  gateways:
  - sockshop-gateway
  http:
  - route:
    - destination:
        host: front-end.sock-shop.svc.cluster.local
        subset: v1
      weight: 100
